<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/step1Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paintboard_step_1"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/step2Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paintboard_step_2"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/step3Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paintboard_step_3"
        android:textAllCaps="false"/>

</LinearLayout>
